# python-dirmagic

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO.md  dev_environment.yml  pyproject.toml  run_it.py  setup.cfg  tox.ini
.github/workflows/: matrix_test.yml
dirmagic/: __init__.py  core_criteria.py  functions.py  generic_criteria.py  pattern_criteria.py  project_types.py  utilities.py
doc/: api_docs.rst  api_overview.rst  conf.py  development.rst  index.rst  installation.rst  project_types.rst  requirements.txt  usecases.rst
tests/: test_core_criteria.py  test_criteria.py  test_functions.py  test_pattern_criteria.py
