[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "python-dirmagic"
version = "0.0.1"
authors = [
  { name="Achim Gädke", email="achim.gaedke@gmail.com" },
]
description = "python-dirmagic finds and identifies project directories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/achimgaedke/python-dirmagic"
"Bug Tracker" = "https://github.com/achimgaedke/python-dimragic/issues"
