[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
# necessary for python-3.7, mypy-0.982
# enable_recursive_aliases = true

[tool.black]
line-length = 79

[tool.pytest]
testpaths = ["tests"]

[project]
name = "python-dirmagic"
version = "0.0.1"
authors = [
  { name="Achim Gädke", email="achim.gaedke@gmail.com" },
]
description = "python-dirmagic finds and identifies project directories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
rich = ["rich"]

[project.urls]
"Homepage" = "https://python-dirmagic.readthedocs.io/"
"Documentation" = "https://python-dirmagic.readthedocs.io/"
"Source" = "https://github.com/achimgaedke/python-dirmagic"
"Bug Reports" = "https://github.com/achimgaedke/python-dimragic/issues"
